--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is a html project">
     <title>Study with practivce</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <a href="#">Home</a>
+    <a href="about.html" target="_blank">About</a>
+    <a href="contact.html">Contact</a>
+    <a href="https://www.google.com.bd/?hl=bn" target="_blank">Visit Goggle</a>
     <!--header section starts-->
     <h1>Sadiqur Rahman</h1>
     <strong>Software Developer</strong>
@@ -24,10 +29,32 @@
 
     <!--Job experience section starts-->
     <h2>Employment History</h2>
+    <ol type="a">
+        <li><strong>Junior software developer at M-files </strong></li>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident id eaque officia veniam ex quas qui voluptates delectus, saepe architecto.</p>
+        <li><strong>Research assistant at Tampere university</strong></li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi expedita voluptatum, temporibus provident odio enim quis iusto impedit ex laboriosam!</p>
+        <li><strong>Research assistant at Tampere university</strong></li>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum provident culpa quo quod qui tempore eos deserunt. Consectetur, doloremque facilis.</p>
+    </ol>
+    
+
     <!--Job experience section ends-->
 
     <!--Education section starts-->
-    <h2>Education</h2>
+    <h2><em>Education</em></h2>
+    <ul>
+        <li> 
+            <strong>M.Sc. in Software, web and cloud</strong>
+            <p>Tampere University, Tampere, Finland</p>
+            <p>Gradding 3.79/5 </p>
+         </li>
+         <li> 
+            <strong>B.Sc. in Computer Science</strong>
+            <p>Leading University,Sylhet,Bangladesh</p>
+            <p>Gradding 3.92/4 </p>
+         </li>
+</ul>
     <!--Education section ends-->
 
     <!--skill section starts-->
@@ -39,8 +66,12 @@
     <!--contact section ends-->
 
     <!--footer section starts-->
-    <p>Develop with love by Sadiqur Rahman</p>
-    <p>Copyright copy2022</p>
+    <p>✅Develop with &hearts;love by Sadiqur Rahman</p>
+    <p>Copyright &copy;2022</p>
+    <a href="https://www.facebook.com/sadman.sadik.330/"><i class="fa-brands fa-facebook"></i></a>
+    <i class="fab fa-youtube"></i>
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-twitter"></i>
     <!--footer section ends-->
 </body>
 </html>
